# color-avoiding-percolation

./: .gitignore  README.md  create_colornet_results.py  load_colornet.py  logbin.py  plot_S_color_scaling.py
colornet/: CMakeLists.txt  README.md  colornet.hpp  main.cpp
colornet/.kdev4/: colornet.kdev4
colornet_scripts/: L_color_by_country_degree.py  L_color_by_degree_fig.py  colored_graph.py  create_colornet_results.py  load_caide.py  load_colornet.py  logbin.py  nx_shp.py  plot_S_color_scaling.py  plot_full_S_color.py  theoretical_curves.py
data_scripts/: caide_country_colored.py  caide_lcolor_colored.py  caide_map.py  caide_us.py  create_all_countries.py  filter_data.py  fraction_in_lcolor.py  trusted_sr_figure.py
manycolornet/: CMakeLists.txt  README.md  main.cpp  main_as.cpp  main_as_perc.cpp  main_as_stat.cpp  main_as_trust_sr.cpp  main_hetero.cpp  manycolornet.cpp  manycolornet.h  manycolornet.kdev4
manycolornet/.kdev4/: manycolornet.kdev4
paper/: avoidable_colors_paper.aux  avoidable_colors_paper.tex  mp.bib  supplement.tex
real_data/: README.md  country_locations.json  iso2to3.json
sim_new/: S_color_degree_dependent.py  S_color_degree_dependent_data.py  S_color_degree_dependent_plot.py  S_color_degree_dependent_poisson.py  S_color_poisson.py  S_color_poisson_plot.py
text/: avoidable_colors_paper.aux  avoidable_colors_paper.bbl  avoidable_colors_paper.blg  avoidable_colors_paper.out  avoidable_colors_paper.tex  message_passing_article.aux  message_passing_article.tex  message_passing_avoiding_colors.aux  message_passing_avoiding_colors.bbl  message_passing_avoiding_colors.blg  message_passing_avoiding_colors.out  message_passing_avoiding_colors.tex  mp.bib  sets_1.py  sets_gc.py  sets_k.py  supplement.tex
